# aRTist-PythonLib

./: .gitattributes  .gitignore  README.md  aRTist.py  artistlib.py  build.sh  build_html.sh  build_pdf.sh  example.py  example_artistlib.py  example_receive_data.py  index.html  licence.md  project.toml  requirements.txt  setup.cfg  setup.py
SimulateFromList/: ListOfSimulations.txt  SimulateFromList.py
Standalones/ParticlesAndPores/: CreateParticlePoreMatrix.py  Create_SingleParticle+Pores.py  Pore_Matrix_Scene.aRTist  Single_Pore_Scene.aRTist
artistlib/: __init__.py  _version.py  api.py  artistlib.py  common_types.py  connection.py  console.py  documentation.md  remote_access.py  remote_connection.py
artistlib/hardware/: __init__.py  base_hardware.py  common_types.py  xray_detector.py  xray_source.py
artistlib/trajectory/: __init__.py  ct_trajectories.py
data/detectors/: InlineCT Detector.aRTdet
data/tubes/: InlineCT Tube.xrs
docs/: index.html  test.html
docs/templates/: head.mako  logo.mako
example/: example_api.py  example_utility.py  sartify.py
examples/: 01_api_example.py  02_circular_trajectory.py  03_get_spectrum.py  04_save_image.py  example_api.py  make_circular_scan.py
sartist/: SaRTist.tcl  __init__.py  api.py  connection.py  convert.py  projeciton_geometry.py  setup.py  utility.py  version.py
sartist/hardware/: __init__.py  actor.py  detector.py  focal_spot.py  source.py
