# setup.cfg file at the root directory
[metadata]
name = artistlib
version = 1.0.0
author = Simon Wittl
author_email = simon.wittl@th-deg.de
description = Python API for the XRay simulation software aRTist
long_description = Python API for the BAM Xray simulation software aRTist. Most GUI elements are wrapped and called via the remote TCL/TK interface to allow scripting in python. Only for reasearch purposes.
python_requires = >=3.7, <4
license = AL-2
classifiers =
    Framework :: numpy
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
    wheel
    numpy


[options.packages.find]
exclude =
    data*
    workspace*
    build*

[build-system]
requires = ["setuptools>=42", "wheel"]

[bdist_wheel]
universal = 0
python-tag = 3.9
